--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "Vyatsu frontend",
-  "homepage": "https://lslavor.github.io/newVyatsu/",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "homepage": "https://lslavor.github.io/newVyatsu/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "chart.js": "^4.4.2",
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
     "vite": "^5.2.0"
   }
 }
