--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Vyatsu frontend",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "homepage": "https://lslavor.github.io/newVyatsu/",
+    "homepage": "https://lslavor.github.io/newVyatsu",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
