--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": false,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://lslavor.github.io/newVyatsu",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "homepage": "https://lslavor.github.io/newVyatsu",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "chart.js": "^4.4.2",
